src/test/ui/parser/bad-name.stderr
error: expected one of `:`, `;`, `=`, or `@`, found `.`
  --> $DIR/bad-name.rs:16:8
   |
LL |   let x.y::<isize>.z foo;
   |        ^ expected one of `:`, `;`, `=`, or `@` here

error: aborting due to previous error

